did some general refactoring and started building out the Footer component. Fixed the bug with the color contrast of the home link in the header component.

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -17,3 +17,7 @@ li {
   justify-content: flex-start;
   background-color: bisque;
 }
+
+.home_link {
+  text-decoration: none;
+}
